--- a/src/main/resources/templates/database/database.html
+++ b/src/main/resources/templates/database/database.html
@@ -65,6 +65,14 @@
 		</div>
 		<br>
 		<div class="row">
+			<div class="col-sm-3 col-sm-offset-1">
+				<form th:action="@{/databases/game}" method="get">
+					<input class="btn btn-lg btn-success btn-block" type="submit" th:value="${activegamecode}"/>
+				</form>		
+			</div>
+		</div>
+		<br>
+		<div class="row">
 			<div class="col-sm-10 bg-danger">
 				<h3 th:text="#{html.database.manage.subtitle.database.user}">database(user)</h3>
 			</div>
