ランキングデータ送信機能修正

--- a/bin/src/main/resources/templates/scores/edit.html
+++ b/bin/src/main/resources/templates/scores/edit.html
@@ -65,9 +65,8 @@
 						th:value="#{html.scores.edit.btn.edit}" />
 				</div>
 			</div>
-			<input type="hidden" name="committime" th:field="*{committime}"
-				th:value="*{committime}" /> <input type="hidden" name="oldusername"
-				th:value="${username}" />
+			<input type="hidden" name="committime" th:field="*{committime}" th:value="*{committime}" /> 
+			<input type="hidden" name="oldusername" th:value="${username}" />
 		</form>
 	</div>
 </body>
