送信ランキングの重複チェック、結果表示 ランキング送信結果表示 プロパティファイルに未設定の項目を英語と日本語にそれぞれに追加

--- a/src/main/resources/templates/database/database.html
+++ b/src/main/resources/templates/database/database.html
@@ -72,7 +72,7 @@
 			</div>
 			<div class="col-sm-3">
 				<form th:action="@{/send}">
-					<input class="btn btn-lg btn-success btn-block" type="submit" th:value="ランキング送信"/>
+					<input class="btn btn-lg btn-success btn-block" type="submit" th:value="#{html.database.manage.btn.sendranking}"/>
 				</form>		
 			</div>
 		</div>
