--- a/bin/src/main/resources/templates/database/send.html
+++ b/bin/src/main/resources/templates/database/send.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title th:text="#{html.send.list.pagetitle}">Rank list page(For sending)</title>
+<title>送信用データ確認画面</title>
 <link rel="stylesheet"
 	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
@@ -13,9 +13,8 @@
 	th:href="@{/webjars/bootstrap/3.3.7/bootstrap-theme.min.css}" />
 <link rel="stylesheet" type="text/css" href="../../static/css/style.css"
 	th:href="@{/css/style.css}" />
-<script type="text/javascript" src="../js/send.js"></script>
 </head>
-<body onLoad="setAlertColors()">
+<body>
 	<header>
 		<div id="nav">
     		<ul>
@@ -29,16 +28,14 @@
 		</div>
 	</header>
 	<div class="content">
-		<h2 class="form-signin-heading" th:text="#{html.send.list.title}">ranking list</h2>
-		<p class="" th:name="tiechecked" th:text="${tiechecked}"></p>
-		<p class="" th:name="result" th:text="${result}">result</p>
-		<h3 class="form-signin-heading" th:text="#{html.send.list.title.total}">Total</h3>
+		<h2 class="form-signin-heading">送信ランキングデータ一覧</h2>
+		<h3 class="form-signin-heading">総合</h3>
 		<table class="table table-striped table-bordered table-responsive">
 			<tr>
-				<th class="col-sm-2" th:text="#{html.send.list.item.rank}">rank</th>
-				<th class="col-sm-2" th:text="#{html.send.list.item.department}">department</th>
-				<th class="col-sm-2" th:text="#{html.send.list.item.username}">username</th>
-				<th class="col-sm-2" th:text="#{html.send.list.item.score}">score</th>
+				<th class="col-sm-2" th:text="#{html.scores.view.rank.title.rank}">rank</th>
+				<th class="col-sm-2">学科名</th>
+				<th class="col-sm-2" th:text="#{html.scores.list.item.username}">username</th>
+				<th class="col-sm-2" th:text="#{html.scores.list.item.score}">score</th>
 				<th class="col-sm-1"></th>
 				<th class="col-sm-1"></th>
 			</tr>
@@ -48,15 +45,15 @@
 				<td th:text="${score.usernamename}">user</td>				
 				<td th:text="${score.point}">0</td>
 				<td>
-					<form th:action="@{/send/edit}" method="post">
-						<input type="submit" name="form" th:value="#{html.send.list.btn.edit}" /> <input
+					<form th:action="@{/scores/edit}" method="post">
+						<input type="submit" name="form" th:value="#{html.scores.list.btn.edit}" /> <input
 							type="hidden" name="username" th:value="${score.username}" /> <input
 							type="hidden" name="committime" th:value="${score.committime}" />
 					</form>
 				</td>
 				<td>
-					<form th:action="@{/send/delete}" method="post">
-						<input type="submit" name="form" th:value="#{html.send.list.btn.delete}" /> <input
+					<form th:action="@{/scores/delete}" method="post">
+						<input type="submit" name="form" th:value="#{html.scores.list.btn.delete}" /> <input
 							type="hidden" name="username" th:value="${score.username}" /> <input
 							type="hidden" name="committime" th:value="${score.committime}" />
 					</form>
@@ -64,13 +61,13 @@
 			</tr>
 		</table>
 		
-		<h3 class="form-signin-heading" th:text="#{html.send.list.title.japanese}">Japanese</h3>
+		<h3 class="form-signin-heading">日本語部門</h3>
 		<table class="table table-striped table-bordered table-responsive">
 			<tr>
-				<th class="col-sm-2" th:text="#{html.send.list.item.rank}">rank</th>
-				<th class="col-sm-2" th:text="#{html.send.list.item.department}">department</th>
-				<th class="col-sm-2" th:text="#{html.send.list.item.username}">username</th>
-				<th class="col-sm-2" th:text="#{html.send.list.item.score}">score</th>
+				<th class="col-sm-2" th:text="#{html.scores.view.rank.title.rank}">rank</th>
+				<th class="col-sm-2">学科名</th>
+				<th class="col-sm-2" th:text="#{html.scores.list.item.username}">username</th>
+				<th class="col-sm-2" th:text="#{html.scores.list.item.score}">score</th>
 				<th class="col-sm-1"></th>
 				<th class="col-sm-1"></th>
 			</tr>
@@ -80,15 +77,15 @@
 				<td th:text="${score.usernamename}">user</td>				
 				<td th:text="${score.point}">0</td>
 				<td>
-					<form th:action="@{/send/edit}" method="post">
-						<input type="submit" name="form" th:value="#{html.send.list.btn.edit}" /> <input
+					<form th:action="@{/scores/edit}" method="post">
+						<input type="submit" name="form" th:value="#{html.scores.list.btn.edit}" /> <input
 							type="hidden" name="username" th:value="${score.username}" /> <input
 							type="hidden" name="committime" th:value="${score.committime}" />
 					</form>
 				</td>
 				<td>
-					<form th:action="@{/send/delete}" method="post">
-						<input type="submit" name="form" th:value="#{html.send.list.btn.delete}" /> <input
+					<form th:action="@{/scores/delete}" method="post">
+						<input type="submit" name="form" th:value="#{html.scores.list.btn.delete}" /> <input
 							type="hidden" name="username" th:value="${score.username}" /> <input
 							type="hidden" name="committime" th:value="${score.committime}" />
 					</form>
@@ -96,13 +93,13 @@
 			</tr>
 		</table>
 		
-		<h3 class="form-signin-heading" th:text="#{html.send.list.title.english}">English</h3>
+		<h3 class="form-signin-heading">英語部門</h3>
 		<table class="table table-striped table-bordered table-responsive">
 			<tr>
-								<th class="col-sm-2" th:text="#{html.send.list.item.rank}">rank</th>
-				<th class="col-sm-2" th:text="#{html.send.list.item.department}">department</th>
-				<th class="col-sm-2" th:text="#{html.send.list.item.username}">username</th>
-				<th class="col-sm-2" th:text="#{html.send.list.item.score}">score</th>
+				<th class="col-sm-2" th:text="#{html.scores.view.rank.title.rank}">rank</th>
+				<th class="col-sm-2">学科名</th>
+				<th class="col-sm-2" th:text="#{html.scores.list.item.username}">username</th>
+				<th class="col-sm-2" th:text="#{html.scores.list.item.score}">score</th>
 				<th class="col-sm-1"></th>
 				<th class="col-sm-1"></th>
 			</tr>
@@ -112,26 +109,26 @@
 				<td th:text="${score.usernamename}">user</td>				
 				<td th:text="${score.point}">0</td>
 				<td>
-					<form th:action="@{/send/edit}" method="post">
-						<input type="submit" name="form" th:value="#{html.send.list.btn.edit}" />
-						<input type="hidden" name="username" th:value="${score.username}" /> 
-						<input type="hidden" name="committime" th:value="${score.committime}" />
+					<form th:action="@{/scores/edit}" method="post">
+						<input type="submit" name="form" th:value="#{html.scores.list.btn.edit}" /> <input
+							type="hidden" name="username" th:value="${score.username}" /> <input
+							type="hidden" name="committime" th:value="${score.committime}" />
 					</form>
 				</td>
 				<td>
-					<form th:action="@{/send/delete}" method="post">
-						<input type="submit" name="form" th:value="#{html.send.list.btn.delete}" /> 
-						<input type="hidden" name="username" th:value="${score.username}" />
-						<input type="hidden" name="committime" th:value="${score.committime}" />
+					<form th:action="@{/scores/delete}" method="post">
+						<input type="submit" name="form" th:value="#{html.scores.list.btn.delete}" /> <input
+							type="hidden" name="username" th:value="${score.username}" /> <input
+							type="hidden" name="committime" th:value="${score.committime}" />
 					</form>
 				</td>
 			</tr>
 		</table>
-		<form class="form-horizontal" th:action="@{/send/postrank}" method="post">
+		<form class="form-horizontal" th:action="@{/databases/postrank}" method="post">
 			<div class="form-group">
 				<div class="col-sm-offset-9 col-sm-3">
 					<input class="btn btn-lg btn-primary btn-block" type="submit"
-						th:value="#{html.send.list.btn.send}" />
+						th:value="送信" />
 				</div>
 			</div>
 		</form>
