--- a/bin/src/main/resources/templates/database/game.html
+++ b/bin/src/main/resources/templates/database/game.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ゲーム区分選択画面</title>
+<title th:text="#{html.game.edit.pagetitle}">category selection page</title>
 <link rel="stylesheet"
 	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
@@ -29,10 +29,10 @@
 		</div>
 	</header>
 	<div class="content">
-		<h2 >ゲーム区分選択</h2>
+		<h2 th:text="#{html.game.edit.title}">typing category selection</h2>
 		<form class="form-horizontal" th:action="@{/databases/gameupdate}" method="post" th:object="${gameForm}">
 			<div class="form-group">
-				<label class="control-label col-sm-2" >ゲーム区分</label>
+				<label class="control-label col-sm-2" th:text="#{html.game.edit.label}">typing category</label>
 				<div class="col-sm-4">
 					<select class="form-control" name="gamecode">
 						<option th:each="item : ${gamecode}" th:value="${item.key}"
@@ -44,7 +44,7 @@
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-4">
 					<input class="btn btn-lg btn-primary btn-block" type="submit"
-						th:value="登録" />
+						th:value="#{html.game.edit.btn.edit}" />
 				</div>
 			</div>
 		</form>
