--- a/bin/src/main/resources/templates/scores/edit.html
+++ b/bin/src/main/resources/templates/scores/edit.html
@@ -42,13 +42,22 @@
 					th:errors="*{username}" class="error-messages">error!</span>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" th:text="#{html.scores.edit.item.inputtime}">input time（seconds）</label>
+				<label class="control-label col-sm-2" th:text="#{html.scores.edit.item.inputtimemin}">input time（min）</label>
 				<div class="col-sm-4">
-					<input class="form-control" type="number" name="inputtime"
-						th:field="*{inputtime}" th:errorclass="error-input" />
+					<input class="form-control" type="number" name="inputtimeMin"
+						th:field="*{inputtimeMin}" th:errorclass="error-input" />
 				</div>
-				<span th:if="${#fields.hasErrors('inputtime')}"
-					th:errors="*{inputtime}" class="error-messages">error!</span>
+				<span th:if="${#fields.hasErrors('inputtimeMin')}"
+					th:errors="*{inputtimeMin}" class="error-messages">error!</span>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" th:text="#{html.scores.edit.item.inputtimesec}">input time（sec）</label>
+				<div class="col-sm-4">
+					<input class="form-control" type="number" name="inputtimeSec"
+						th:field="*{inputtimeSec}" th:errorclass="error-input" />
+				</div>
+				<span th:if="${#fields.hasErrors('inputtimeSec')}"
+					th:errors="*{inputtimeSec}" class="error-messages">error!</span>
 			</div>
 			<div class="form-group">
 				<label class="control-label col-sm-2" th:text="#{html.scores.edit.item.typemiss}">type miss(times)</label>
@@ -65,8 +74,9 @@
 						th:value="#{html.scores.edit.btn.edit}" />
 				</div>
 			</div>
-			<input type="hidden" name="committime" th:field="*{committime}" th:value="*{committime}" /> 
-			<input type="hidden" name="oldusername" th:value="${username}" />
+			<input type="hidden" name="committime" th:field="*{committime}"
+				th:value="*{committime}" /> <input type="hidden" name="oldusername"
+				th:value="${username}" />
 		</form>
 	</div>
 </body>
