--- a/bin/src/main/resources/templates/send/list.html
+++ b/bin/src/main/resources/templates/send/list.html
@@ -35,25 +35,35 @@
 		<h3 class="form-signin-heading" th:text="#{html.send.list.title.total}">Total</h3>
 		<table class="table table-striped table-bordered table-responsive">
 			<tr>
-				<th class="col-sm-3" th:text="#{html.send.list.item.rank}">rank</th>
-				<th class="col-sm-3" th:text="#{html.send.list.item.department}">department</th>
-				<th class="col-sm-3" th:text="#{html.send.list.item.username}">username</th>
-				<th class="col-sm-3" th:text="#{html.send.list.item.score}">score</th>
-				<th class="col-sm-1"></th>
-				<th class="col-sm-1"></th>
+				<th class="col-sm-2" th:text="#{html.send.list.item.rank}">rank</th>
+				<th class="col-sm-2" th:text="#{html.send.list.item.department}">department</th>
+				<th class="col-sm-2" th:text="#{html.send.list.item.username}">username</th>
+				<th colspan="2" class="col-sm-2" th:text="#{html.send.list.item.score.japanese}">japanese score</th>
+				<th colspan="2" class="col-sm-2" th:text="#{html.send.list.item.score.english}">english score</th>
+				<th class="col-sm-2" th:text="#{html.send.list.item.score.total}">total score</th>
+				<th class="col-sm-2"></th>
 			</tr>
 			<tr th:each="score : ${totalrank}">
 				<td th:text="${score.rank}">0</td>
 				<td th:text="${score.department}">0</td>
-				<td th:text="${score.username}">user</td>				
-				<td th:text="${score.point}">0</td>
+				<td th:text="${score.usernamename}">user</td>
+				<td th:text="${score.jppoint}">0</td>
 				<td>
 					<form th:action="@{/send/edit}" method="post">
-						<input type="submit" name="form" th:value="#{html.send.list.btn.edit}" /> <input
-							type="hidden" name="username" th:value="${score.username}" /> <input
-							type="hidden" name="committime" th:value="${score.committime}" />
+						<input type="submit" name="form" th:value="#{html.send.list.btn.edit}" />
+						<input type="hidden" name="username" th:value="${score.username}" />
+						<input type="hidden" name="committime" th:value="${score.committime}" />
 					</form>
 				</td>
+				<td th:text="${score.enpoint}">0</td>
+				<td>
+					<form th:action="@{/send/edit}" method="post">
+						<input type="submit" name="form" th:value="#{html.send.list.btn.edit}" />
+						<input type="hidden" name="username" th:value="${score.enusername}" />
+						<input type="hidden" name="committime" th:value="${score.encommittime}" />
+					</form>
+				</td>				
+				<td th:text="${score.point}">0</td>
 				<td>
 					<form th:action="@{/send/delete}" method="post">
 						<input type="submit" name="form" th:value="#{html.send.list.btn.delete}" /> <input
@@ -77,7 +87,7 @@
 			<tr th:each="score : ${japaneserank}">
 				<td th:text="${score.rank}">0</td>
 				<td th:text="${score.department}">0</td>
-				<td th:text="${score.username}">user</td>				
+				<td th:text="${score.usernamename}">user</td>				
 				<td th:text="${score.point}">0</td>
 				<td>
 					<form th:action="@{/send/edit}" method="post">
@@ -109,7 +119,7 @@
 			<tr th:each="score : ${englishrank}">
 				<td th:text="${score.rank}">0</td>
 				<td th:text="${score.department}">0</td>
-				<td th:text="${score.username}">user</td>				
+				<td th:text="${score.usernamename}">user</td>				
 				<td th:text="${score.point}">0</td>
 				<td>
 					<form th:action="@{/send/edit}" method="post">
